--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "tools/bflat"]
 	path = tools/bflat
-	url = https://github.com/bflattened/bflat.git
+	url = https://github.com/ProtonOS/bflat.git
 [submodule "dotnet"]
 	path = dotnet
 	url = https://github.com/dotnet/runtime.git
